# rust_slint_timer

./: .gitignore  Cargo.toml  README.md  build.rs
.kiro/specs/rust-slint-timer/: design.md  requirements.md  tasks.md
src/: main.rs
src/timer/: logic.rs  mod.rs  state.rs
src/ui/: timer.slint
tests/: integration_tests.rs
